*icon text wrapping fixed
changed from ul to div

--- a/styles/main.css
+++ b/styles/main.css
@@ -172,8 +172,7 @@ button:hover {
     position: absolute;
     bottom: -10%;
     left: 33%;
-    /* bottom: 240px;
-    left: 450px; */
+   
 }
 
 .hero-image img {
@@ -222,7 +221,7 @@ a .arb:hover {
 
 .collumn {
     width: calc(100% / 3 - 4rem / 3);
-    height: 140vh;
+    height: 120vh;
     float: left;
     border: 1px solid rgb(201, 201, 201);
 }
@@ -243,11 +242,11 @@ a .arb:hover {
 
 .collumn .table-mini-container .line-text {
     margin: 1rem 0;
-    word-spacing: initial;
+    padding-left: 1rem;
 }
 
-.inline-block {
-    display: inline-block;
+.collumn .table-mini-container .line-text i {
+    margin-left: -1rem;
 }
 
 .table-header {
@@ -289,9 +288,12 @@ a .arb:hover {
     padding: 0;
 }
 
+
+
 .collumn .table-mini-container ul li {
     margin: 1rem 0;
-
+   
+    
 }
 
 .container-70 .full {
@@ -314,7 +316,28 @@ a .arb:hover {
     float: right;
 }
 
+/* TEXT WITH PICTURE BOX */
 
+.half-box {
+    width: 50%;
+    float: left;
+}
+
+.text-with-pic {
+    
+}
+/* Image Box */
+
+.image-box {
+    width: 100%;
+    height: 100%;  
+}
+
+.image-box img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
 
 
 
